<resources>
    <string name="app_name">Obelisk Farm</string>
    <string name="service_running">Screenshot-Überwachung aktiv</string>
    <string name="service_stopped">Screenshot-Überwachung gestoppt</string>
    <string name="start_monitoring">Überwachung starten</string>
    <string name="stop_monitoring">Überwachung stoppen</string>
    <string name="last_processed">Zuletzt verarbeitet:</string>
    <string name="no_images">Noch keine Bilder verarbeitet</string>
    <string name="images_processed">Verarbeitete Bilder: %d</string>
    <string name="notification_channel_name">Screenshot Überwachung</string>
    <string name="notification_channel_description">Benachrichtigung für Screenshot-Überwachung</string>
</resources>
